# schema-mapper-toolkit

./: README.md  hybrid_mapping_output.json  hybrid_mapping_output_20260121_153012.csv  hybrid_mapping_output_20260121_153731.csv  hybrid_mapping_output_20260129_115151.json  hybrid_mapping_output_20260201_112116.json  hybrid_mapping_output_20260201_113932.csv  pyproject.toml  requirements.txt  schema_metadata_20260120_221535.csv  schema_metadata_20260120_222938.json  schema_metadata_20260122_103935.json  schema_metadata_20260201_122144.csv  schema_metadata_20260201_122345.csv  schema_metadata_20260201_122601.csv  schema_metadata_20260201_123425.xlxs  schema_metadata_20260201_123616.xlxs  schema_metadata_20260201_123751.xlxs  schema_metadata_20260201_123943.csv
docker/: docker-compose.yml
docker/qdrant/: DockerFile  docker-compose.yml
schema_matching_toolkit/: __init__.py
schema_matching_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
schema_matching_toolkit/common/: __init__.py  db_config.py  logging.py  qdrant_config.py  schema_models.py  text_utils.py
schema_matching_toolkit/descriptions/: groq_description.py
schema_matching_toolkit/extract/: extractor.py  sqlalchemy_connector.py
schema_matching_toolkit/hybrid_ensemble_matcher/: __init__.py  exporter.py  matcher.py  runner.py  table_mapper.py  table_matcher.py
tests/: test-description.py  test_bm25_sparse.py  test_extract.py  test_hybrid_ensemble.py  test_llm_embedding_match.py  test_metadata_generator.py  test_minilm_dense.py  test_profile.py  test_relationship.py
(+28 files in other folders)
