[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-matching-toolkit"
version = "0.1.0"
description = "Schema Matching Toolkit - Module 1 Schema Extractor"
authors = [{ name = "Ashween" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["schema_matching_toolkit*"]
