[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-matching-toolkit"
version = "0.1.0"
description = "Schema extraction, profiling, descriptions and matching toolkit"
authors = [{ name = "Ashween", email = "ashween@example.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "groq>=0.9.0"
]

[tool.setuptools.packages.find]
where = ["."]
