[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-matching-toolkit"
version = "0.1.0"
description = "Schema extraction, profiling, descriptions and matching toolkit"
authors = [{ name = "Ashween", email = "ashween@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "sqlalchemy",
  "psycopg2-binary",
  "qdrant-client",
  "sentence-transformers"
]


[tool.setuptools.packages.find]
where = ["."]
